# obsidian-link

./: Cargo.toml  README.md  links  obsidian-link.yml
src/: main.rs
