[package]
name = "obsidian-link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.29"
eyre = "0.6.11"
regex = "1.10.2"
shellexpand = "3.1.0"
reqwest = { version = "0.11.23", features = ["json"] }
lazy_static = "1.4.0"
json = "0.12.4"
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0.108"
